prod-fleet/mentolder/penpot-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workspace-ingress-penpot
  namespace: ${WORKSPACE_NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "${WORKSPACE_NAMESPACE}-redirect-https@kubernetescrd,${WORKSPACE_NAMESPACE}-hsts-headers@kubernetescrd,${WORKSPACE_NAMESPACE}-security-headers@kubernetescrd"
spec:
  tls:
    - hosts:
        - design.${PROD_DOMAIN}
      secretName: ${TLS_SECRET_NAME}
  rules:
    - host: design.${PROD_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penpot-gateway
                port:
                  number: 80
