prod-fleet/mentolder/studio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workspace-ingress-studio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "${WORKSPACE_NAMESPACE}-redirect-https@kubernetescrd,${WORKSPACE_NAMESPACE}-hsts-headers@kubernetescrd,${WORKSPACE_NAMESPACE}-security-headers@kubernetescrd"
spec:
  tls:
    - hosts:
        - studio.${PROD_DOMAIN}
      secretName: ${TLS_SECRET_NAME}
  rules:
    - host: studio.${PROD_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-studio
                port:
                  number: 4180
